--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.4.15"
+    "@astrojs/preact": "^3.1.1",
+    "@astrojs/rss": "^4.0.5",
+    "astro": "^4.4.15",
+    "preact": "^10.19.6"
   },
   "devDependencies": {
     "sass": "^1.71.1"
