--- a/package.json
+++ b/package.json
@@ -12,10 +12,16 @@
   "dependencies": {
     "@astrojs/preact": "^3.1.1",
     "@astrojs/rss": "^4.0.5",
+    "@astrojs/solid-js": "^4.0.1",
     "astro": "^4.4.15",
-    "preact": "^10.19.6"
+    "preact": "^10.19.6",
+    "solid-js": "^1.8.15"
   },
   "devDependencies": {
     "sass": "^1.71.1"
+  },
+  "overrides": {
+    "react": "npm:@preact/compat@latest",
+    "react-dom": "npm:@preact/compat@latest"
   }
 }
